--- a/makeMyTrip/src/main/java/travelSite/data.properties
+++ b/makeMyTrip/src/main/java/travelSite/data.properties
@@ -1,5 +1,6 @@
 browserUsed=firefox
-url=https://www.google.com/
+googleUrl=https://www.google.com/
+url=https://www.makemytrip.com/
 mobileNumber=8374297708
 pwd=BiswaNk@24
 userExistsTextExpected=User is already registered CLICK HERE If your are trying to login.
