some changes to createAccout test case - 27-06-2020

--- a/makeMyTrip/src/main/java/travelSite/data.properties
+++ b/makeMyTrip/src/main/java/travelSite/data.properties
@@ -7,6 +7,8 @@ userExistsTextExpected=User is already registered CLICK HERE If your are trying 
 excelDataPath=C:\\Users\\Biswajeet Nayak\\git\\MakeMyTrip\\makeMyTrip\\excel\\data.xlsx
 loginId=biswajeetnk@yahoo.com
 loginPwd=Bisu@241093
+loginId2=endlybiswajeeta24@gmail.com
+loginPwd2=Bisu@241093
 fromCity=Hyderabad
 toCity=Bhubaneshwar
 departureMonth=September 2020
