small changes to assertions - 29/06

--- a/makeMyTrip/src/main/java/travelSite/data.properties
+++ b/makeMyTrip/src/main/java/travelSite/data.properties
@@ -15,3 +15,4 @@ departureMonth=September 2020
 departureDate=25
 returnMonth=November 2020
 returnDate=10
+expectedTitle=MakeMyTrip - #1 Travel Website
